<?xml version="1.0" encoding="utf-8"?><!--
/*
 Copyright 2018 tarekmabdallah91@gmail.com

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

 http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 */
 -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity">

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/description_profile_picture"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/take_picture"
        style="@style/text_views_style"
        android:drawableLeft="@mipmap/ic_launcher"
        android:drawableStart="@mipmap/ic_launcher"
        android:text="@string/take_picture"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_picture" />

    <TextView
        android:id="@+id/get_image_from_gallery"
        style="@style/text_views_style"
        android:drawableLeft="@mipmap/ic_launcher"
        android:drawableStart="@mipmap/ic_launcher"
        android:text="@string/open_gallery"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_picture" />

    <TextView
        android:id="@+id/get_first_name_tv"
        style="@style/text_views_style"
        android:text="@string/first_name_label"
        app:layout_constraintTop_toBottomOf="@id/get_image_from_gallery" />

    <EditText
        android:id="@+id/get_first_name_et"
        style="@style/edit_text_views_style"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/get_first_name_tv"
        tools:ignore="LabelFor,get_first_name_tv"
        tools:text="@string/first_name_label" />

    <TextView
        android:id="@+id/get_last_name_tv"
        style="@style/text_views_style"
        android:text="@string/last_name_label"
        app:layout_constraintTop_toBottomOf="@id/get_first_name_et" />

    <EditText
        android:id="@+id/get_last_name_et"
        style="@style/edit_text_views_style"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/get_last_name_tv"
        tools:ignore="LabelFor,get_first_name_tv"
        tools:text="@string/last_name_label" />

    <RadioGroup
        android:id="@+id/get_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/get_last_name_et">

        <RadioButton
            android:id="@+id/male_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male_radio_Btn" />

        <RadioButton
            android:id="@+id/female_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female_radio_btn" />
    </RadioGroup>

    <TextView
        android:id="@+id/get_location"
        style="@style/text_views_style"
        android:contentDescription="@string/description_get_location_image"
        android:drawableLeft="@android:drawable/ic_dialog_map"
        app:layout_constraintTop_toBottomOf="@id/get_gender" />

    <ImageView
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/save_btn"
        android:src="@android:drawable/ic_menu_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cancel_btn"
        android:src="@android:drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>