<?xml version="1.0" encoding="utf-8"?><!--
/*
 Copyright 2018 tarekmabdallah91@gmail.com

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

 http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 */
 -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditProfileActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="@dimen/user_pic_width"
            android:layout_height="@dimen/user_pic_height"
            android:layout_margin="@dimen/padding2"
            android:contentDescription="@string/description_profile_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/take_picture"
            style="@style/text_views_style"
            android:layout_margin="@dimen/padding2"
            android:drawableLeft="@mipmap/ic_launcher"
            android:drawableStart="@mipmap/ic_launcher"
            android:text="@string/take_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_picture" />

        <TextView
            android:id="@+id/get_image_from_gallery"
            style="@style/text_views_style"
            android:layout_margin="@dimen/padding2"
            android:drawableLeft="@mipmap/ic_launcher"
            android:drawableStart="@mipmap/ic_launcher"
            android:text="@string/open_gallery"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_picture" />

        <TextView
            android:id="@+id/get_first_name_tv"
            style="@style/text_views_style"
            android:layout_margin="@dimen/padding2"
            android:text="@string/first_name_label"
            app:layout_constraintTop_toBottomOf="@id/get_image_from_gallery" />

        <EditText
            android:id="@+id/first_name_et"
            style="@style/edit_text_views_style"
            android:layout_width="0dp"
            android:layout_margin="@dimen/padding2"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="@+id/get_first_name_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/get_first_name_tv"
            app:layout_constraintTop_toTopOf="@+id/get_first_name_tv"
            tools:ignore="LabelFor,get_first_name_tv"
            tools:text="@string/first_name_label" />

        <TextView
            android:id="@+id/get_last_name_tv"
            style="@style/text_views_style"
            android:layout_margin="@dimen/padding2"
            android:text="@string/last_name_label"
            app:layout_constraintTop_toBottomOf="@+id/get_first_name_tv" />

        <EditText
            android:id="@+id/last_name_et"
            style="@style/edit_text_views_style"
            android:layout_width="0dp"
            android:layout_margin="@dimen/padding2"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="@+id/get_last_name_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/get_last_name_tv"
            app:layout_constraintTop_toTopOf="@+id/get_last_name_tv"
            tools:ignore="LabelFor,get_first_name_tv"
            tools:text="@string/last_name_label" />

        <RadioGroup
            android:id="@+id/get_gender_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding2"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/gender_label_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/gender_label_tv"
            app:layout_constraintTop_toTopOf="@+id/gender_label_tv">

            <RadioButton
                android:id="@+id/male_choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:tag="1"
                android:text="@string/male_radio_Btn" />

            <RadioButton
                android:id="@+id/female_choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="2"
                android:text="@string/female_radio_btn" />
        </RadioGroup>

        <TextView
            android:id="@+id/get_location"
            style="@style/text_views_style"
            android:layout_margin="@dimen/padding2"
            android:contentDescription="@string/description_get_location_image"
            android:drawableLeft="@android:drawable/ic_dialog_map"
            android:drawableStart="@android:drawable/ic_dialog_map"
            android:text="@string/select_your_location_label"
            app:layout_constraintEnd_toEndOf="@+id/map"
            app:layout_constraintStart_toStartOf="@+id/map"
            app:layout_constraintTop_toBottomOf="@+id/map" />

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="@dimen/map_width"
            android:layout_height="@dimen/map_height"
            android:layout_margin="@dimen/padding2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/get_gender_radio_btn" />

        <TextView
            android:id="@+id/save_btn"
            style="@style/text_views_style"
            android:layout_margin="@dimen/padding2"
            android:drawableTop="@android:drawable/ic_menu_save"
            android:text="@string/save_btn"
            app:layout_constraintEnd_toEndOf="@+id/get_location"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/get_location" />

        <TextView
            android:id="@+id/cancel_btn"
            style="@style/text_views_style"
            android:layout_margin="@dimen/padding2"
            android:drawableTop="@android:drawable/ic_delete"
            android:text="@string/cancel_btn"
            app:layout_constraintStart_toStartOf="@+id/get_location"
            app:layout_constraintTop_toBottomOf="@+id/get_location" />

        <TextView
            android:id="@+id/gender_label_tv"
            style="@style/text_views_style"
            android:layout_margin="@dimen/padding2"
            android:text="@string/select_gender_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/get_last_name_tv" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>