<?xml version="1.0" encoding="utf-8"?><!--
/*
 Copyright 2018 tarekmabdallah91@gmail.com

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

 http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 */
 -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailsActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding1"
        android:padding="@dimen/padding1">

        <TextView
            android:id="@+id/title"
            style="@style/title_style"
            android:layout_margin="@dimen/padding2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteY="39dp"
            tools:text="@string/recipe_title" />

        <TextView
            android:id="@+id/no_images_tv"
            style="@style/text_views_style"
            android:layout_marginTop="@dimen/padding2"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/title"
            tools:text="@string/no_videos_msg" />

        <!-- to display images horizontally -->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/images_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding1"
            app:layout_constraintTop_toBottomOf="@id/no_images_tv">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/ingredients_label"
            style="@style/labels_style"
            android:layout_marginTop="@dimen/padding2"
            android:text="@string/ingredients_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/images_rv" />

        <TextView
            android:id="@+id/ingredients"
            style="@style/text_views_style"
            android:layout_marginTop="@dimen/padding2"
            app:layout_constraintEnd_toEndOf="@+id/ingredients_label"
            app:layout_constraintStart_toStartOf="@+id/ingredients_label"
            app:layout_constraintTop_toBottomOf="@+id/ingredients_label"
            tools:text="@string/ingredients" />

        <TextView
            android:id="@+id/instructions_label"
            style="@style/labels_style"
            android:layout_marginTop="@dimen/padding2"
            android:text="@string/instructions_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingredients" />

        <TextView
            android:id="@+id/instructions"
            style="@style/text_views_style"
            android:layout_marginTop="@dimen/padding2"
            app:layout_constraintEnd_toEndOf="@+id/instructions_label"
            app:layout_constraintStart_toStartOf="@+id/instructions_label"
            app:layout_constraintTop_toBottomOf="@+id/instructions_label"
            tools:text="@string/instructions" />

        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/exo_player"
            android:layout_width="match_parent"
            android:layout_height="@dimen/exo_player_height"
            android:paddingBottom="@dimen/padding_bottom_details_activity"
            app:layout_constraintTop_toBottomOf="@id/no_videos_tv"></com.google.android.exoplayer2.ui.PlayerView>

        <TextView
            android:id="@+id/no_videos_tv"
            style="@style/text_views_style"
            android:layout_marginTop="@dimen/padding2"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/instructions"
            tools:text="@string/no_videos_msg" />

        <TextView
            android:id="@+id/empty_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_screen_msg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </android.support.constraint.ConstraintLayout>

</ScrollView>